# CINN

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  a.out  build.sh  build_test.sh  cinn_builder_api.html  genindex.html  guide.html  index.html  install.html  load_paddle_model.html  matmul.html  objects.inv  search.html  searchindex.js  test_group_62.py  train_resnet50_with_cinn.html  update_origin.sh
cinn/: CMakeLists.txt  cinn.h  gtest_main.cc
cinn/api/: CMakeLists.txt  README.md  fuse_pass_context.h  op_group.h  op_group_interface.h  op_interface.h  op_node.cc  op_node.h  shape.h  tensor_interface.h  tensor_interface_list.h  tensor_node.cc  tensor_node.h
cinn/auto_schedule/: CMakeLists.txt  auto_schedule.proto  auto_tuner.cc  auto_tuner.h  auto_tuner_performance_test.cc  auto_tuner_test.cc  performance_comparison.cc  task_registrar.h  task_registrar_test.cc  tuning.h
cinn/backends/: CMakeLists.txt  _x86_builtin_source.cc  _x86_builtin_source.hpp  codegen_c.cc  codegen_c.h  codegen_c_test.cc  codegen_c_x86.cc  codegen_c_x86.h  codegen_c_x86_test.cc  codegen_cuda_dev.cc  codegen_cuda_dev.h  codegen_cuda_dev_test.cc  codegen_cuda_generate_test.cc  codegen_cuda_host.cc  codegen_cuda_host.h  codegen_cuda_util.cc  codegen_cuda_util.h  codegen_debug_test.cc  compiler.cc  compiler.h  compiler_test.cc  cuda_util.cc  cuda_util.h  extern_func_emitter.cc  extern_func_emitter.h  extern_func_emitter_builtin.cc  extern_func_emitter_builtin.h  extern_func_jit_register.cc  extern_func_jit_register.h  extern_func_protos.cc  extern_func_protos.h  function_prototype.cc  function_prototype.h  generated1.cu  generated_module1.cc  ir_schedule_test.cc  modular.cc  modular.h  nvrtc_util.cc  nvrtc_util.h  (+4 more)
cinn/common/: CMakeLists.txt  arithmatic.cc  arithmatic.h  arithmatic_test.cc  axis.cc  axis.h  axis_test.cc  bfloat16.h  bfs_visitor.h  cas.cc  cas.h  cas_test.cc  cinn_value.cc  cinn_value.h  cinn_value_test.cc  common.h  context.cc  context.h  cuda_test_helper.cc  cuda_test_helper.h  debug_manager.cc  debug_manager.h  dfs_visitor.h  dfs_visitor_test.cc  domain.cc  flags.h  float16.h  float16_bfloat16_cuda_test.cu  float16_cuda_test.cu  float16_host_test.cc  float16_utils.h  graph_utils.cc  graph_utils.h  graph_utils_test.cc  hashable_weak_ptr.h  info_registry.cc  info_registry.h  ir.cc  ir.h  ir_util.cc  (+25 more)
cinn/dialect/: CMakeLists.txt  basic_kernels.cc  basic_kernels.td  cinn_base.cc  cinn_base.h  cinn_base.td  dense_tensor.cc  dense_tensor.h  dense_tensor.td  diagnostic_utils.cc  init_cinn_dialects.cc  init_cinn_dialects.h  mlir_loader.cc  mlir_loader.h  mlir_loader_test.cc  ops.td  opt.cc  opt.h  tensor_shape.cc  tensor_shape.h  tensor_shape.td  tensor_shape_base.td  types.cc
cinn/dsl/: README.md
cinn/frontend/: CMakeLists.txt  api.cc  api.h  base_builder.cc  base_builder.h  cinn_builder.cc  cinn_builder.h  cinn_builder_test.cc  computation.cc  computation.h  computation_test.cc  decomposer_registry.cc  decomposer_registry.h  decomposer_registry_test.cc  executor.cc  executor.h  executor_test.cc  interpreter.cc  interpreter.h  interpreter_test.cc  net_builder.cc  net_builder.h  net_builder_test.cc  op_decomposer.cc  op_mapper_registry.cc  op_mapper_registry.h  op_mapper_registry_test.cc  optimize.cc  optimize.h  paddle_model_convertor.cc  paddle_model_convertor.h  paddle_model_convertor_test.cc  paddle_model_to_netbuilder.cc  paddle_model_to_netbuilder.h  paddle_model_to_netbuilder_test.cc  paddle_model_to_program.cc  paddle_model_to_program.h  program_pass.cc  program_pass.h  pybind.cc  (+5 more)
cinn/hlir/: CMakeLists.txt  graph.h  node.h  op.h  op_strategy.h  op_test.cc  pass.h  print_graph_pass_test.cc  schedule.h  test_op.cc
cinn/host_context/: CMakeLists.txt  core_runtime.cc  core_runtime.h  core_runtime_test.cc  dense_tensor.cc  dense_tensor.h  dense_tensor_view.cc  dense_tensor_view.h  kernel_frame.cc  kernel_frame.h  kernel_registry.cc  kernel_registry.h  kernel_registry_test.cc  kernel_utils.cc  kernel_utils.h  kernel_utils_test.cc  mlir_exec.cc  mlir_to_runtime_translate.cc  mlir_to_runtime_translate.h  mlir_to_runtime_translate_test.cc  op_executable.cc  op_executable.h  op_executable_test.cc  symbol_table.cc  symbol_table.h  tensor_shape.cc  value.cc  value.h  value_test.cc
cinn/ir/: CMakeLists.txt  batch_norm_fp16_pointwise_test.cc  batch_norm_fp16_test.cc  block_model_test.cc  buffer.cc  buffer.h  buffer_test.cc  collect_ir_nodes.cc  collect_ir_nodes.h  collect_ir_nodes_test.cc  function.cc  function.h  function_base.cc  function_base.h  function_definition.cc  function_definition.h  function_test.cc  fuse_block_model_fp16_test.cc  fuse_block_model_test.cc  intrinsic_ops.cc  intrinsic_ops.h  intrinsic_ops_test.cc  ir.cc  ir.h  ir_base.cc  ir_base.h  ir_compare.cc  ir_compare.h  ir_compare_test.cc  ir_constant.cc  ir_constant.h  ir_mutator.cc  ir_mutator.h  ir_operators.cc  ir_operators.h  ir_operators_test.cc  ir_printer.cc  ir_printer.h  ir_printer_test.cc  ir_schedule.cc  (+38 more)
cinn/kernel/: CMakeLists.txt  basic_kernels.cc  basic_kernels.h  tensor_kernels.cc  tensor_kernels.h  tensor_shape_kernels.cc  tensor_shape_kernels.h
cinn/lang/: CMakeLists.txt  README.md  buffer.cc  buffer.h  builtin.cc  builtin.h  compute.cc  compute.h  compute_at_postprocess.cc  compute_at_postprocess.h  compute_test.cc  lower.cc  lower.h  lower_impl.cc  lower_impl.h  lower_impl_test.cc  lower_test.cc  module.cc  module.h  packed_func.cc  packed_func.h  packed_func_test.cc  placeholder.cc  placeholder.h  placeholder_test.cc  tensor.cc  tensor.h  tensor_test.cc
cinn/optim/: CMakeLists.txt  activate_to_extern_call.cc  activate_to_extern_call.h  buffer_assign.cc  buffer_assign.h  (+84 more)
python/: CMakeLists.txt  setup.py.in
tests/: CMakeLists.txt  concrete_program_builder.h  program_builder.h  program_ops_builder.h  subgraph_program_builder.h  test01_elementwise_add_case.cc  test01_elementwise_add_main.cc  test02_helper.h  test02_matmul_case.cc  test02_matmul_main.cc  test03_convolution_case.cc  test03_convolution_main.cc  utils.cc  utils.h
(+2879 files in other folders)
