cc_library(cinn_gtest_main SRCS gtest_main.cc DEPS gtest)

add_subdirectory(common)
add_subdirectory(utils)
add_subdirectory(poly)
add_subdirectory(runtime)
add_subdirectory(ir)
add_subdirectory(backends)
add_subdirectory(lang)
add_subdirectory(optim)
add_subdirectory(hlir)
add_subdirectory(python)
add_subdirectory(pybind)
